# ai-nexus

./: .gitignore  DEPLOY.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  CMakeLists.txt  Dockerfile
backend/include/: config.h  server.h
backend/include/ai/: llm_client.h  llm_protocol.h  nlp_engine.h  nlp_rules.h  vector_store.h
backend/src/: config.cpp  main.cpp  server.cpp
backend/src/ai/: llm_client.cpp  nlp_engine.cpp  nlp_rules.cpp  vector_store.cpp
backend/tests/: test_config.cpp  test_llm_protocol.cpp  test_nlp_rules.cpp  test_vector_store.cpp
docs/: AI_INTEGRATION.md  API.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: client.js
frontend/src/components/: ChatWindow.vue  MessageBubble.vue
frontend/src/router/: index.js
frontend/src/views/: ChatView.vue  KnowledgeView.vue
gateway/: .env.example  Dockerfile  bootstrap.php  composer.json  docker-entrypoint.sh
gateway/public/: index.php
gateway/src/: Router.php
gateway/src/Auth/: Session.php
gateway/src/Controllers/: ChatController.php  HealthController.php
gateway/src/Proxy/: BackendProxy.php
gateway/templates/: layout.php
scripts/: dev-up.sh
